k8s_stategies/4 - canary/istio/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goprom
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
  - route:
    - destination:
        host: goprom
        subset: v1
        port:
          number: 80
      weight: 90
    - destination:
        host: goprom
        subset: v2
        port:
          number: 80
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: goprom
spec:
  host: goprom
  subsets:
  - name: v1
    labels:
      version: v1.0.0
    trafficPolicy:
      loadBalancer:
        consistentHash:
          httpCookie:
            name: user
            ttl: 0s
  - name: v2
    labels:
      version: v2.0.0
    trafficPolicy:
      loadBalancer:
        consistentHash:
          httpCookie:
            name: user
            ttl: 0s
